Fix alignment issues with drawer content.

--- a/src/css/pins.css
+++ b/src/css/pins.css
@@ -64,5 +64,38 @@ div.listButtons button.removeButton, div.listButtons button.wantedButton {
 
 div.qrQuietZone {
   background: 'white';
-  padding: '16px';
+  padding: 32px;
+}
+
+div.drawer {
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  display: flex;
+}
+
+div.drawerContent {
+  justify-content: center;
+  width: 320pt;
+  display: flex;
+}
+
+svg.selectionQrCode {
+  display: block;
+  margin: auto;
+}
+
+div.qrDescription {
+  margin: auto;
+  text-align: center;
+  margin-bottom: 16pt;
+  width: 30ch;
+}
+
+div.selectionFilterItem {
+  display: block;
+}
+
+div.filterInfo, div.pinSelectionFilter, div.setSelection {
+  display: block;
 }
